--- a/covid19Map/java/app/build.gradle
+++ b/covid19Map/java/app/build.gradle
@@ -32,5 +32,6 @@ dependencies {
     implementation "androidx.recyclerview:recyclerview:1.1.0"
     implementation 'com.google.maps.android:android-maps-utils:1.0.2'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
+    implementation 'com.android.volley:volley:1.1.1'
 
 }
