--- a/covid19Map/java/app/src/main/AndroidManifest.xml
+++ b/covid19Map/java/app/src/main/AndroidManifest.xml
@@ -22,7 +22,11 @@
          Google Maps Android API v2, but you must specify either coarse or fine
          location permissions for the 'MyLocation' functionality.
     -->
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"></uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
+
 
     <!-- EXTERNAL_STORAGE permissions are optional for Android 6.0 onwards. -->
     <uses-permission
@@ -34,7 +38,8 @@
 
     <application
         android:allowBackup="true"
-        android:label="@string/demo_title"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/title"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
 
