--- a/covid19Map/java/app/build.gradle
+++ b/covid19Map/java/app/build.gradle
@@ -25,6 +25,7 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.ads:ads-identifier:1.0.0-alpha01'
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
@@ -46,5 +47,7 @@ dependencies {
 
     implementation 'com.google.android.gms:play-services-location:17.0.0'
     implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.google.guava:guava:28.0-android'
+    implementation 'com.google.android.gms:play-services-ads-lite:11.8.0'
 
 }
